Report: draft Part 3 (Our approach)
§6 ProtoCatalyst's compile-time encoder — three-module architecture
diagram (encoder = Spark-free IR, encoder-spark = the bridge,
benchmark-spark = Scala 2.13 side). Two-step derivation: Mirror at
scalac time for schema, quoted-macro for the read/write lambdas.

§7 Implementation — what the macro actually emits for read (direct
constructor call, primitives unboxed) and write (direct field
selector). Writer caching (Spark UnsafeProjection pattern). The
generic-case-class subtlety (memberType + appliedToTypes pattern).
Type coverage table classified by effort. Binary/wire compatibility
note.

§8 The build dance — documents the operational cost of running
Scala 3 against Scala 2.13 Spark:
  - For3Use2_13 + exclusions
  - ScalaReflection.<clinit> wall (with stack trace)
  - SIP-51 allowUnsafeScalaLibUpgrade
  - --add-opens for sun.util.calendar
  - REPL classloader confusion (userClassPathFirst)
  - Cross-module file-based communication (3 places)
  - Cumulative cost: ~12 lines build.sbt, ~150 lines duplicated
    code, ~300 lines fixture infrastructure, one extra JVM fork per
    cross-version round-trip

Section closes by framing the workaround inventory as itself the
strongest single argument for migration.

~430 lines added, 921 total.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>